[package]
name = "celcius"
version = "1.3.0"
edition = "2021"
authors = ["DrDreo <code@drdreo.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
quicli = "0.4"
structopt = "0.2"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
statrs = "0.16.0"
chrono = "0.4.24"
indicatif = "0.17.3"
console = "0.15.5"
dotenv = "0.15.0"
once_cell = "1.17.1"
